--- a/plugins/ein/Enhancements.org
+++ b/plugins/ein/Enhancements.org
@@ -24,12 +24,15 @@ There are a number of helper functions for returning the struct for an opened no
 
  - ~[[file:lisp/ein-notebook.el::(defun%20ein:notebook-get-opened-notebook%20(url-or-port%20path)][ein:notebook-get-opened-notebook]]~ ::
  - ~[[file:lisp/ein-notebook.el::(defun%20ein:notebook-get-opened-buffer%20(url-or-port%20path)][ein:notebook-get-opened-buffer]]~ ::
-   - 
+  
 ** Notebooklist Buffer
 ** Kernel communication
 ** Contents API
 
 Documented at the IPython Github [[https://github.com/ipython/ipython/wiki/IPEP-27%253A-Contents-Service][wiki.]]
+
+There is also [[http://petstore.swagger.io/?url=https://raw.githubusercontent.com/jupyter/jupyter-js-services/master/rest_api.yaml][another]] great online resource for session and kernel
+REST API.
 
 ** Connecting to a running Kernel
 Entry point is ~[[file:lisp/ein-notebook.el::ein:notebook-start-kernel][ein:notebook-start-kernel]]~ which is called from
@@ -38,14 +41,29 @@ server requesting the contents of a given notebook.
 
 ~[[file:lisp/ein-kernel.el::ein:kernel-start][ein:kernel-start]]~ starts/gets a session with a running kernel using the REST API.
 
-On a [[file:lisp/ein-kernel.el::ein:kernel--kernel-s][successful]] return ein [[file:lisp/ein-websocket.el::ein:websocket][creates]] a websocket channel (channels for IPython
-2.x) via a call to ~websocket-open~ in the [[https://github.com/ahyatt/emacs-websocket][emacs-websocket]] package. The URL request is of the form:
+On a [[file:lisp/ein-kernel.el::ein:kernel--kernel-s][successful]] return ein [[file:lisp/ein-websocket.el::ein:websocket][creates]] a websocket channel (channels for
+IPython 2.x) via a call to ~websocket-open~ in the [[https://github.com/ahyatt/emacs-websocket][emacs-websocket]]
+package. The URL request is of the form:
 
 #+BEGIN_QUOTE
 ws://{server_address}:{port}/api/kernels/{kernel id from previous REST query}/channels?session_id={session id}
 #+END_QUOTE
 
 * Enhancements/Fixes
+** Errors on saving new notebook
+Happening because metadata slot is borked when creating new notebooks.
+
+
+** Support company-mode
+** Inline latex
+See issue [[https://github.com/millejoh/emacs-ipython-notebook/issues/88][#88]].
+
+** Interactive Widgets
+
+For the most part this is a non-starter since in Jupyter this is built on web
+and javascript, but maybe with emacs 25's coming integration with [[https://www.emacswiki.org/emacs/EmacsXWidgets][xwidgets]] there
+is hope?
+
 ** Working with jupyterhub
 
 Jupyterhub requires authentication using username/password, as opposed to just
